crates/forge_server/src/service/snapshots/forge_server__service__neo_chat_service__tests__chat_context.snap
---
source: crates/forge_server/src/service/neo_chat_service.rs
expression: last_request
snapshot_kind: text
---
Request {
    messages: [
        ContentMessage(
            ContentMessage {
                role: System,
                content: "Do everything that the user says",
                tool_call: None,
            },
        ),
        ContentMessage(
            ContentMessage {
                role: User,
                content: "<task>Hello can you help me?</task>",
                tool_call: None,
            },
        ),
        ContentMessage(
            ContentMessage {
                role: Assistant,
                content: "Let's use foo tool",
                tool_call: Some(
                    ToolCall {
                        name: ToolName(
                            "foo",
                        ),
                        call_id: Some(
                            ToolCallId(
                                "too_call_001",
                            ),
                        ),
                        arguments: Object {
                            "bar": Number(2),
                            "foo": Number(1),
                        },
                    },
                ),
            },
        ),
        ToolMessage(
            ToolResult {
                name: ToolName(
                    "foo",
                ),
                use_id: Some(
                    ToolCallId(
                        "too_call_001",
                    ),
                ),
                content: "{\"a\":100,\"b\":200}",
                is_error: false,
            },
        ),
    ],
    model: ModelId(
        "openai/gpt-3.5-turbo",
    ),
    tools: [],
}
