crates/forge_server/src/service/snapshots/forge_server__service__neo_chat_service__tests__chat_tool_result.snap
---
source: crates/forge_server/src/service/neo_chat_service.rs
expression: actual
snapshot_kind: text
---
[
    ToolUseDetected(
        ToolName(
            "foo",
        ),
    ),
    ToolCallStart(
        ToolCall {
            name: ToolName(
                "foo",
            ),
            call_id: Some(
                ToolCallId(
                    "too_call_001",
                ),
            ),
            arguments: Object {
                "bar": Number(2),
                "foo": Number(1),
            },
        },
    ),
    ToolUseEnd(
        ToolResult {
            name: ToolName(
                "foo",
            ),
            call_id: Some(
                ToolCallId(
                    "too_call_001",
                ),
            ),
            content: "<foo><a>100</a><><b>200</b></foo>",
            is_error: false,
        },
    ),
    Text(
        "Task is complete, let me know if you need anything else.",
    ),
]
